<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.sammekleijn.moneyoutransactions.extension.FloatExtKt" />

        <import type="android.view.View" />

        <variable
            name="transaction"
            type="com.sammekleijn.moneyoutransactions.domain.Transaction" />

        <variable
            name="viewModel"
            type="com.sammekleijn.moneyoutransactions.viewmodel.TransactionDetailModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.TransactionDetailActivity">

        <android.support.v7.widget.CardView
            style="@style/CardView.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_vertical_margin_between_layouts"
                android:layout_marginTop="@dimen/default_horizontal_margin_between_layouts">

                <TextView
                    android:id="@+id/transactionAmountTextView"
                    style="@style/TextAppearance.CardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@{FloatExtKt.toEuro(transaction.amount, 2)}"
                    tools:text="+ €20.31" />

                <TextView
                    android:id="@+id/transactionDescriptionInfoTextView"
                    style="@style/TextAppearance.CardView.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/transactionDescriptionTextView"
                    style="@style/TextAppearance.CardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/transactionDescriptionInfoTextView"
                    android:text="@{transaction.description}"
                    tools:text="starbucks amsterdam CS" />

                <TextView
                    android:id="@+id/transactionDateInfoTextView"
                    style="@style/TextAppearance.CardView.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/transactionDescriptionTextView"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/transactionDateTextView"
                    style="@style/TextAppearance.CardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/transactionDateInfoTextView"
                    android:text="@{transaction.dateAsString}"
                    tools:text="10 augustus 2017" />

                <TextView
                    android:id="@+id/transactionCounterpartyInfoTextView"
                    style="@style/TextAppearance.CardView.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/transactionDateTextView"
                    android:text="@string/counter_party" />

                <TextView
                    android:id="@+id/transactionCounterpartyTextView"
                    style="@style/TextAppearance.CardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/transactionCounterpartyInfoTextView"
                    android:text="@{transaction.otherAccount}"
                    tools:text="NL91ABNA0417164300" />

                <TextView
                    android:id="@+id/balanceBeforeTransactionInfoTextView"
                    style="@style/TextAppearance.CardView.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/transactionCounterpartyTextView"
                    android:text="@string/balance_before_transaction" />

                <TextView
                    android:id="@+id/balanceBeforeTransactionTextView"
                    style="@style/TextAppearance.CardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/balanceBeforeTransactionInfoTextView"
                    android:text="@{String.format(@string/account_balance, FloatExtKt.toStringWithPrecision(transaction.balanceBeforeTransaction(), 2))}"
                    tools:text="€279,69" />

                <TextView
                    android:id="@+id/balanceAfterTransactionInfoTextView"
                    style="@style/TextAppearance.CardView.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/balanceBeforeTransactionTextView"
                    android:text="@string/balance_after_transaction" />

                <TextView
                    android:id="@+id/balanceAfterTransactionTextView"
                    style="@style/TextAppearance.CardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/balanceAfterTransactionInfoTextView"
                    android:text="@{String.format(@string/account_balance, FloatExtKt.toStringWithPrecision(transaction.balanceAfterTransaction, 2))}"
                    tools:text="€300" />
            </RelativeLayout>


        </android.support.v7.widget.CardView>
    </RelativeLayout>
</layout>